kratos/external_libraries/gidpost/source/gidpost.h



typedef enum {
  GiD_Scalar = 0,
  GiD_Vector,
  GiD_Matrix,
  GiD_PlainDeformationMatrix,
  GiD_MainMatrix,
  GiD_LocalAxes,
  GiD_ComplexScalar,
  GiD_ComplexVector
} GiD_ResultType;


typedef enum { GiD_OnNodes=0, GiD_OnGaussPoints } GiD_ResultLocation;


typedef unsigned int GiD_FILE;


GIDPOST_API
int GiD_WriteCoordinates2D(int id, double x, double y);


GIDPOST_API
int GiD_fWriteCoordinates2D(GiD_FILE fd, int id, double x, double y);


/*
 *  Begin Result Block. This function open a result block. All the result
 *  information is provided the function call.
 */

GIDPOST_API
int GiD_BeginResult(GP_CONST char * Result, GP_CONST char * Analysis,
		    double step,
		    GiD_ResultType Type, GiD_ResultLocation Where,
		    GP_CONST char * GaussPointsName,
		    GP_CONST char * RangeTable, 
		    int compc, GP_CONST char * compv[]);
 
  
GIDPOST_API
int GiD_fBeginResult(GiD_FILE fd, GP_CONST char * Result,
		     GP_CONST char * Analysis,
		     double step,
		     GiD_ResultType Type, GiD_ResultLocation Where,
		     GP_CONST char * GaussPointsName,
		     GP_CONST char * RangeTable, 
		     int compc, GP_CONST char * compv[]);


/*
 *  Define the components names associated to the current result,
 *  either a single result block or the current result defined in a
 *  result group.
 */

GIDPOST_API
int GiD_ResultComponents(int compc, GP_CONST char * compv[]);


GIDPOST_API
int GiD_fResultComponents(GiD_FILE fd, int compc, GP_CONST char * compv[]);


GIDPOST_API
int GiD_Write2DVector(int id, double x, double y);


GIDPOST_API
int GiD_fWrite2DVector(GiD_FILE fd, int id, double x, double y);