external_libraries/gidpost/fortran_module/gidpost_interface.f90


    CHARACTER(LEN=*),                     INTENT(IN)    :: string_for                   ! fortran string
    CHARACTER(LEN=1,KIND=C_CHAR), TARGET, INTENT(INOUT) :: string_cpp(GID_MAX_CHAR_LEN) ! cpp format string
    TYPE(C_PTR) :: C_PTR_STRING                                                         ! pointer to cpp format string

    C_PTR_STRING = C_NULL_PTR
    IF( string_for .NE. GID_STRING_NULL ) THEN
      string_cpp   = C_STRING(string_for)
      C_PTR_STRING = C_LOC(string_cpp)
    END IF

  END FUNCTION C_PTR_STRING

!--------------------------------------------------------------------------
! SPECIAL INTERFACES
!--------------------------------------------------------------------------
  
  SUBROUTINE GiD_WriteCoordinates3D(id,x,y,z)

    INTEGER(C_INT), INTENT(IN) :: id
    REAL(C_DOUBLE), INTENT(IN) :: x, y, z

    CALL GiD_WriteCoordinates_cpp(id,x,y,z)

  END SUBROUTINE GiD_WriteCoordinates3D
  
  SUBROUTINE GiD_fWriteCoordinates3D(fd,id,x,y,z)

    TYPE(GiD_File), INTENT(IN) :: fd
    INTEGER(C_INT), INTENT(IN) :: id
    REAL(C_DOUBLE), INTENT(IN) :: x, y, z

    CALL GiD_fWriteCoordinates_cpp(fd,id,x,y,z)

  END SUBROUTINE GiD_fWriteCoordinates3D
  
!--------------------------------------------------------------------------

  SUBROUTINE GiD_WriteCoordinates_f(id,xyz)

    INTEGER(C_INT), INTENT(IN) :: id
    REAL(C_DOUBLE), INTENT(IN) :: xyz(:)

    SELECT CASE (SIZE(xyz))
    CASE (2)
      CALL GiD_WriteCoordinates2D(id,xyz(1),xyz(2))
    CASE (3)
      CALL GiD_WriteCoordinates_cpp(id,xyz(1),xyz(2),xyz(3))
    END SELECT

  END SUBROUTINE GiD_WriteCoordinates_f

  SUBROUTINE GiD_fWriteCoordinates_f(fd,id,xyz)

    TYPE(GiD_File), INTENT(IN) :: fd
    INTEGER(C_INT), INTENT(IN) :: id
    REAL(C_DOUBLE), INTENT(IN) :: xyz(:)

    SELECT CASE (SIZE(xyz))
    CASE (2)
      CALL GiD_fWriteCoordinates2D(fd,id,xyz(1),xyz(2))
    CASE (3)
      CALL GiD_fWriteCoordinates_cpp(fd,id,xyz(1),xyz(2),xyz(3))
    END SELECT

  END SUBROUTINE GiD_fWriteCoordinates_f

!--------------------------------------------------------------------------

  SUBROUTINE GiD_WriteElementMat_f(id,conec,material)
    
    INTEGER(C_INT), INTENT(IN) :: id
    INTEGER(C_INT), INTENT(IN) :: conec(:)
    INTEGER(C_INT), INTENT(IN) :: material
   
    INTEGER(C_INT) :: conec_cpp(SIZE(conec)+1)

    conec_cpp(:SIZE(conec))  = conec
    conec_cpp(SIZE(conec)+1) = material
    CALL GiD_WriteElementMat_cpp(id,conec_cpp)

  END SUBROUTINE GiD_WriteElementMat_f

  SUBROUTINE GiD_fWriteElementMat_f(fd,id,conec,material)
    
    TYPE(GiD_File), INTENT(IN) :: fd
    INTEGER(C_INT), INTENT(IN) :: id
    INTEGER(C_INT), INTENT(IN) :: conec(:)
    INTEGER(C_INT), INTENT(IN) :: material
   
    INTEGER(C_INT) :: conec_cpp(SIZE(conec)+1)

    conec_cpp(:SIZE(conec))  = conec
    conec_cpp(SIZE(conec)+1) = material
    CALL GiD_fWriteElementMat_cpp(fd,id,conec_cpp)

  END SUBROUTINE GiD_fWriteElementMat_f
  
!--------------------------------------------------------------------------
  
  SUBROUTINE GiD_Write3DVector(id,x,y,z)

    INTEGER(C_INT), INTENT(IN) :: id
    REAL(C_DOUBLE), INTENT(IN) :: x,y,z

    CALL GiD_WriteVector_cpp(id,x,y,z)

  END SUBROUTINE GiD_Write3DVector
  
  SUBROUTINE GiD_fWrite3DVector(fd,id,x,y,z)

    TYPE(GiD_File), INTENT(IN) :: fd
    INTEGER(C_INT), INTENT(IN) :: id
    REAL(C_DOUBLE), INTENT(IN) :: x,y,z

    CALL GiD_fWriteVector_cpp(fd,id,x,y,z)

  END SUBROUTINE GiD_fWrite3DVector
  
!--------------------------------------------------------------------------

  SUBROUTINE GiD_WriteVector_f(id,vector)

    INTEGER(C_INT), INTENT(IN) :: id
    REAL(C_DOUBLE), INTENT(IN) :: vector(:)

    SELECT CASE (SIZE(vector))
    CASE (2)
      CALL GiD_Write2DVector(id,vector(1),vector(2))
    CASE (3)
      CALL GiD_WriteVector_cpp(id,vector(1),vector(2),vector(3))
    END SELECT

  END SUBROUTINE GiD_WriteVector_f

  SUBROUTINE GiD_fWriteVector_f(fd,id,vector)

    TYPE(GiD_File), INTENT(IN) :: fd
    INTEGER(C_INT), INTENT(IN) :: id
    REAL(C_DOUBLE), INTENT(IN) :: vector(:)

    SELECT CASE (SIZE(vector))
    CASE (2)
      CALL GiD_fWrite2DVector(fd,id,vector(1),vector(2))
    CASE (3)
      CALL GiD_fWriteVector_cpp(fd,id,vector(1),vector(2),vector(3))
    END SELECT

  END SUBROUTINE GiD_fWriteVector_f

!--------------------------------------------------------------------------

  SUBROUTINE GiD_WriteVectorModule_f(id,vector)

    INTEGER(C_INT), INTENT(IN) :: id
    REAL(C_DOUBLE), INTENT(IN) :: vector(4)

    CALL GiD_WriteVectorModule_cpp(id,vector(1),vector(2),vector(3),vector(4))

  END SUBROUTINE GiD_WriteVectorModule_f

  SUBROUTINE GiD_fWriteVectorModule_f(fd,id,vector)

    TYPE(GiD_File), INTENT(IN) :: fd
    INTEGER(C_INT), INTENT(IN) :: id
    REAL(C_DOUBLE), INTENT(IN) :: vector(4)

    CALL GiD_fWriteVectorModule_cpp(fd,id,vector(1),vector(2),vector(3),vector(4))

  END SUBROUTINE GiD_fWriteVectorModule_f

!--------------------------------------------------------------------------

  SUBROUTINE GiD_BeginResult(Result,Analysis,Step,Type,Where,GaussPointsName,RangeTable,nComp,Comp)

    CHARACTER(LEN=*),  INTENT(IN) :: Result     ! result name
    CHARACTER(LEN=*),  INTENT(IN) :: Analysis   ! analysis type (timestep,load,...)
    REAL(C_DOUBLE),    INTENT(IN) :: Step       !
    TYPE(GiD_ResType), INTENT(IN) :: Type       ! result tipe (scalar,vector,matrix)
    TYPE(GiD_ResLoc),  INTENT(IN) :: Where      ! result location (onnodes,ongausspoint)
    CHARACTER(LEN=*),  INTENT(IN) :: GaussPointsName ! gauss point name (just ongausspoint)
    CHARACTER(LEN=*),  INTENT(IN) :: RangeTable ! 
    INTEGER(C_INT),    INTENT(IN) :: nComp 
    CHARACTER(LEN=*),  INTENT(IN) :: Comp(nComp)

    CHARACTER(1,KIND=C_CHAR), TARGET :: GaussPointsName_cpp(GID_MAX_CHAR_LEN)
    CHARACTER(1,KIND=C_CHAR), TARGET :: RangeTable_cpp(GID_MAX_CHAR_LEN)
    CHARACTER(1,KIND=C_CHAR), TARGET :: Comp_cpp(GID_MAX_CHAR_LEN,nComp)
    CHARACTER(1,KIND=C_CHAR) :: Result_cpp(MAX_STRING_LEN), Analysis_cpp(MAX_STRING_LEN)
    TYPE(C_PTR)  :: GaussPointsName_ptr
    TYPE(C_PTR)  :: RangeTable_ptr
    TYPE(C_PTR), TARGET :: Comp_ptr(nComp)
    INTEGER :: i

    INTERFACE
      SUBROUTINE GiD_BeginResult_cpp(Result_cpp,Analysis_cpp,Step,Type,Where,GaussPointsName,RangeTable,nComp,Comp) &
        BIND(C,NAME='GiD_BeginResult')
        IMPORT :: GiD_File, GiD_ResType, GiD_ResLoc, C_CHAR, C_INT, C_DOUBLE, C_PTR
        CHARACTER(1,KIND=C_CHAR), INTENT(IN) :: Result_cpp(1)   ! result name
        CHARACTER(1,KIND=C_CHAR), INTENT(IN) :: Analysis_cpp(1) ! analysis type (timestep,load,...)
        REAL(C_DOUBLE),    VALUE, INTENT(IN) :: Step       !
        TYPE(GiD_ResType), VALUE, INTENT(IN) :: Type       ! result tipe (scalar,vector,matrix)
        TYPE(GiD_ResLoc),  VALUE, INTENT(IN) :: Where      ! result location (onnodes,ongausspoint)
        TYPE(C_PTR),       VALUE, INTENT(IN) :: GaussPointsName ! gauss point name (just ongausspoint)
        TYPE(C_PTR),       VALUE, INTENT(IN) :: RangeTable ! 
        INTEGER(C_INT),    VALUE, INTENT(IN) :: nComp
        TYPE(C_PTR),       VALUE, INTENT(IN) :: Comp
      END SUBROUTINE GiD_BeginResult_cpp
    END INTERFACE
    
    ! Optional values:
    GaussPointsName_ptr = C_PTR_STRING(GaussPointsName,GaussPointsName_cpp)
    RangeTable_ptr      = C_PTR_STRING(RangeTable,RangeTable_cpp)
    DO i = 1, nComp
      IF (Comp(i).NE.GID_STRING_NULL) THEN
        Comp_cpp(:,i) = C_STRING(Comp(i)); Comp_ptr(i)  = C_LOC(Comp_cpp(:,i))
      ELSE
        Comp_cpp(:,i) = C_NULL_CHAR; Comp_ptr(i) = C_LOC(Comp_cpp(:,i))
      END IF
    END DO
   
    Analysis_cpp = C_STRING(Analysis)
    Result_cpp   = C_STRING(Result)
    call GiD_BeginResult_cpp(Result_cpp,Analysis_cpp,Step,Type,Where,RangeTable_ptr,GaussPointsName_ptr,&
                             nComp,C_LOC(Comp_ptr))

  END SUBROUTINE GiD_BeginResult

  SUBROUTINE GiD_fBeginResult(fd,Result,Analysis,Step,Type,Where,GaussPointsName,RangeTable,nComp,Comp)

    TYPE(GiD_File),    INTENT(IN) :: fd         ! file
    CHARACTER(LEN=*),  INTENT(IN) :: Result     ! result name
    CHARACTER(LEN=*),  INTENT(IN) :: Analysis   ! analysis type (timestep,load,...)
    REAL(C_DOUBLE),    INTENT(IN) :: Step       !
    TYPE(GiD_ResType), INTENT(IN) :: Type       ! result tipe (scalar,vector,matrix)
    TYPE(GiD_ResLoc),  INTENT(IN) :: Where      ! result location (onnodes,ongausspoint)
    CHARACTER(LEN=*),  INTENT(IN) :: GaussPointsName ! gauss point name (just ongausspoint)
    CHARACTER(LEN=*),  INTENT(IN) :: RangeTable ! 
    INTEGER(C_INT),    INTENT(IN) :: nComp 
    CHARACTER(LEN=*),  INTENT(IN) :: Comp(nComp)

    CHARACTER(1,KIND=C_CHAR), TARGET  :: GaussPointsName_cpp(GID_MAX_CHAR_LEN)
    CHARACTER(1,KIND=C_CHAR), TARGET  :: RangeTable_cpp(GID_MAX_CHAR_LEN)
    CHARACTER(1,KIND=C_CHAR), TARGET  :: Comp_cpp(GID_MAX_CHAR_LEN,nComp)
    CHARACTER(1,KIND=C_CHAR) :: Result_cpp(MAX_STRING_LEN), Analysis_cpp(MAX_STRING_LEN)
    TYPE(C_PTR)  :: GaussPointsName_ptr
    TYPE(C_PTR)  :: RangeTable_ptr
    TYPE(C_PTR), TARGET :: Comp_ptr(nComp)
    INTEGER :: i

    INTERFACE
      SUBROUTINE GiD_fBeginResult_cpp(fd,Result_cpp,Analysis_cpp,Step,Type,Where,GaussPointsName,RangeTable,nComp,Comp) &
        BIND(C,NAME='GiD_fBeginResult')
        IMPORT :: GiD_File, GiD_ResType, GiD_ResLoc, C_CHAR, C_INT, C_DOUBLE, C_PTR
        TYPE(GiD_File),    VALUE, INTENT(IN) :: fd
        CHARACTER(1,KIND=C_CHAR), INTENT(IN) :: Result_cpp(1)   ! result name
        CHARACTER(1,KIND=C_CHAR), INTENT(IN) :: Analysis_cpp(1) ! analysis type (timestep,load,...)
        REAL(C_DOUBLE),    VALUE, INTENT(IN) :: Step            !
        TYPE(GiD_ResType), VALUE, INTENT(IN) :: Type            ! result tipe (scalar,vector,matrix)
        TYPE(GiD_ResLoc),  VALUE, INTENT(IN) :: Where           ! result location (onnodes,ongausspoint)
        TYPE(C_PTR),       VALUE, INTENT(IN) :: GaussPointsName ! gauss point name (just ongausspoint)
        TYPE(C_PTR),       VALUE, INTENT(IN) :: RangeTable
        INTEGER(C_INT),    VALUE, INTENT(IN) :: nComp
        TYPE(C_PTR),       VALUE, INTENT(IN) :: Comp
      END SUBROUTINE GiD_fBeginResult_cpp
    END INTERFACE

    ! Optional values:
    GaussPointsName_ptr = C_PTR_STRING(GaussPointsName,GaussPointsName_cpp)
    RangeTable_ptr      = C_PTR_STRING(RangeTable,RangeTable_cpp)
    Result_cpp   = C_STRING(Result)
    Analysis_cpp = C_STRING(Analysis)
    DO i = 1, nComp
      IF (Comp(i).NE.GID_STRING_NULL) THEN
        Comp_cpp(:,i) = C_STRING(Comp(i)); Comp_ptr(i)  = C_LOC(Comp_cpp(:,i))
      ELSE
        Comp_cpp(:,i) = C_NULL_CHAR; Comp_ptr(i) = C_LOC(Comp_cpp(:,i))
      END IF
    END DO
    
    call GiD_fBeginResult_cpp(fd,Result_cpp,Analysis_cpp,Step,Type,Where,RangeTable_ptr,GaussPointsName_ptr,&
                              nComp,C_LOC(Comp_ptr))

  END SUBROUTINE GiD_fBeginResult

!--------------------------------------------------------------------------

  SUBROUTINE GiD_ResultComponents(nComp,Comp)

    INTEGER(C_INT),   INTENT(IN) :: nComp
    CHARACTER(LEN=*), INTENT(IN) :: Comp(nComp)

    CHARACTER(1,KIND=C_CHAR), TARGET :: Comp_cpp(GID_MAX_CHAR_LEN,nComp)
    TYPE(C_PTR), TARGET :: Comp_ptr(nComp)
    INTEGER :: i

    INTERFACE
      SUBROUTINE GiD_ResultComponents_cpp(nComp,Comp) BIND(C,NAME='GiD_ResultComponents')
        IMPORT :: C_INT, C_PTR
        INTEGER(C_INT), VALUE, INTENT(IN) :: nComp
        TYPE(C_PTR),    VALUE, INTENT(IN) :: Comp
      END SUBROUTINE GiD_ResultComponents_cpp
    END INTERFACE

    DO i = 1, nComp
      Comp_ptr(i) = C_PTR_STRING(Comp(i),Comp_cpp(:,i))
    END DO
    
    call GiD_ResultComponents_cpp(nComp,C_LOC(Comp_ptr))

  END SUBROUTINE GiD_ResultComponents

  SUBROUTINE GiD_fResultComponents(fd,nComp,Comp)

    TYPE(GiD_File),   INTENT(IN) :: fd         ! file
    INTEGER(C_INT),   INTENT(IN) :: nComp
    CHARACTER(LEN=*), INTENT(IN) :: Comp(nComp)
